Compile_html.js * added code to emulating the roll20 post processing done to html for local development * added options for command line use * added help text * cannot emulate roll20 js at this time PF2E.scss * made changes to color and borders to create more uniform bordering using css grid * added a left and right global classes, not sure if more of these will be useful yet, these ones most likely won't be useful long term. top.scss and nav.scss * added some grid related stuff for layout visibility while I work on combat Assets folder * added blood and shield images combat-col.html * wrote HTML for HP section * duplicated HP HTML for shield section, WIP combat-col.scss * Wrote some reusable css for all items in the combat column * Added css for all items above the action/spells box * Wrote css for HP and some for armor Also added the output files from the compile script for tracking May add a --prod option to the compile script to generate final files with changes and change the default behavor to generate [filename]_[timestamp].html/css files the won't be tracked

--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,5 @@ Call_of_Cthulhu_Spanish/Delta Green Variant
 /base.css
 /app.css
 /.vs/config/applicationhost.config
+Pathfinder 2E by PAUR/pathfinder2_gag_local.css
+Pathfinder 2E by PAUR/pathfinder2_gag_local.html
